# Stratogen

./: .gitignore  README.md  ReleaseSummary.md  docker-compose.yml  ecosystem.config.js  pm2 instructions usage for developing .md
Backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  script.sql
Backend/Secret/: .env.example
Backend/app/: main.py
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 0001_initial_clean_schema.py
Backend/app/auth/: __init__.py  dependencies.py  security.py
Backend/app/core/: database.py  settings.py
Backend/app/crud/: __init__.py  auth.py  documents.py  investments.py  llm_services.py  notifications.py  risks_issues.py  workflows.py
Backend/app/llm/: __init__.py  llm_downloader.py  llm_engine.py  llm_manager.py
Backend/app/llm/services/: analyst.py  chat_service.py  report_service.py  workflow_assistant.py
Backend/app/models/: __init__.py  auth.py  investments.py  llm_services.py  notifications.py  risks_issues.py  teams.py  users.py  workflows.py
Backend/app/routers/: __init__.py  auth.py  documents.py  investments.py  llm_services.py  notifications.py  risks_issues.py  workflows.py
Backend/app/schemas/: __init__.py  auth.py  investments.py  llm_services.py  notifications.py  risks_issues.py  teams.py  users.py  workflows.py
Backend/app/utils/: __init__.py  exceptions.py  logging.py  pdf_creator.py
Backend/app/workflows/: __init__.py  engine.py  loader.py
Backend/config/: config.yaml
Backend/helpers/: create_hash.py  print_tree.py
Backend/prompt/: report_template.md  rules.md  summarize_report.md
Backend/prompt/templates/: pmp_report_template.md
Frontend/: Dockerfile  components.json  index.html  openapi.json  package.json  tailwind.config.ts  (+3 more)
(+103 files in other folders)
